k8s/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: drive-development
---
apiVersion: v1
kind: Namespace
metadata:
  name: drive-staging
---
apiVersion: v1
kind: Namespace
metadata:
  name: drive-production
